<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServerActivity">

    <LinearLayout
        android:layout_width="326dp"
        android:layout_height="53dp"
        android:background="#F1FFE0"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/serverActivity_button_connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703">

        <TextView
            android:id="@+id/serverActivity_textView_serverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/servername"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/serverActivity_editText_serverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="text"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/serverActivity_button_connect"
        android:layout_width="141dp"
        android:layout_height="65dp"
        android:layout_marginBottom="240dp"
        android:text="@string/connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="392dp"
        android:layout_height="76dp"
        android:layout_marginBottom="16dp"
        android:text="@string/server_temp_disclaimer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>